kubernetes/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          resources:
            limits:
              cpu: 500m
              memory: 100M
            requests:
              cpu: 200m
              memory: 50M
          image: matthieuf/pubsub-api:1.3
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              readOnly: true
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: api-config
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "keyvault-secrets" # This should match the name of your SecretProviderClass
      restartPolicy: Always
