kubernetes/api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    appgw.ingress.kubernetes.io/override-frontend-port: ""
    appgw.ingress.kubernetes.io/health-probe-port: "80"
    appgw.ingress.kubernetes.io/health-probe-path: "/api/Product/productlist"
    appgw.ingress.kubernetes.io/health-probe-status-code: "100-599"
    appgw.ingress.kubernetes.io/health-probe-interval: "30"
    appgw.ingress.kubernetes.io/health-probe-timeout: "30"
    appgw.ingress.kubernetes.io/health-probe-unhealthy-threshold: "2"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: ""
    http:
      paths:
      - pathType: Prefix
        path: /api/*
        backend:
          service:
            name: api
            port:
              number: 80
